--- a/components/Home.module.css
+++ b/components/Home.module.css
@@ -1,51 +1,62 @@
-.home{
-    padding:20px;
+.home {
+    padding: 20px;
     background-image: url("/image.png");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 670px;
-
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;     
 }
-.home h1{
+
+.home h1 {
     text-align: center;
     color: white;
-    margin-top: 90px;
     text-shadow: 2px 2px black;
+    margin-bottom: 30px;
 }
-.main{
+
+.main {
     border: 2px solid white;
     border-radius: 10px;
-    width: 600px;
+    width: 90%;            
+    max-width: 600px;     
     height: 150px;
-    margin-left: 350px;
-    position: fixed;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    position:fixed;
-}
-.main{
-    margin-top: 100px;
     color: white;
     text-align: center;
-      text-shadow: 2px 2px black;
-  
-    
-}
-.main h1{
-    margin-top:20px;
+    text-shadow: 2px 2px black;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding-top: 20px;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
+.main h1 {
+    margin-top: 0px;
+}
 
-.btn{
+.btn {
     display: flex;
     justify-content: center;
-    flex-direction: row;
-    border-radius: 20px;
+    flex-wrap: wrap;     
     gap: 30px;
-      text-shadow: 2px 2px #ff0000;
+    margin-top: 15px;
+    text-shadow: 2px 2px #ff0000;
 }
 
-.btn button{
-     height: 40px;
-    width: 80px;
+.btn button {
+    height: 40px;
+    width: 100px;
+    border-radius: 10px;
+    font-weight: bold;
+    background-color: white;
+    color: black;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.2s ease;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.btn button:hover {
+    transform: scale(1.05);
 }
